Fix too little scale at small devices, fix too big callback form issue, fix modal alignment

--- a/src/sass/layouts/_base.scss
+++ b/src/sass/layouts/_base.scss
@@ -6,7 +6,7 @@ html {
     font-size: 1.75vw;
   }
   @include media('<=sm') {
-    font-size: 3.34vw;
+    font-size: 4.15vw;
   }
 }
 
