--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -37,7 +37,7 @@
     margin: 1em;
     min-height: calc(100% - 2em);
     @include media('<=sm') {
-      margin: 0;
+      margin: 1em 0;
     }
   }
 
